--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,6 @@
-
+[theme]
+primaryColor='#154360"
+backgroundColor="#148f77"
+secondaryBackgroundColor="#ebdef0"
+textColor="#f0f3f4"
+font="San Serif"
