--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor='#154360"
 backgroundColor="#148f77"
 secondaryBackgroundColor="#ebdef0"
 textColor="#f0f3f4"
-font="San Serif"
+font="Sans Serif"
