--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor='#154360"
+primaryColor="#f7dc6f"
 backgroundColor="#148f77"
 secondaryBackgroundColor="#ebdef0"
 textColor="#f0f3f4"
