--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#f7dc6f"
 backgroundColor="#148f77"
 secondaryBackgroundColor="#ebdef0"
-textColor="#f0f3f4"
+textColor="#154360"
 font="serif"
