--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#f7dc6f"
-backgroundColor="#148f77"
-secondaryBackgroundColor="#ebdef0"
-textColor="#154360"
+backgroundColor="#1b4f72"
+secondaryBackgroundColor="#d6eaf8"
+textColor="#fdfefe"
 font="serif"
