--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#f7dc6f"
 backgroundColor="#1b4f72"
 secondaryBackgroundColor="#d6eaf8"
-textColor="#fdfefe"
+textColor="#003153"
 font="serif"
