--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#f7dc6f"
-backgroundColor="#1b4f72"
+backgroundColor="#efcc00"
 secondaryBackgroundColor="#d6eaf8"
 textColor="#003153"
 font="serif"
