--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#f7dc6f"
 backgroundColor="#003153"
-secondaryBackgroundColor="#d6eaf8"
+secondaryBackgroundColor="#002147"
 textColor="#efcc00"
 font="serif"
